--- a/02.html
+++ b/02.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div>我在这里 加油 坚持我可以的！！！</div>
-    <div>坚持坚持坚持</div>
+    加油加油加油加油加油加油    
 </body>
 </html>
