--- a/01.html
+++ b/01.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <div>加油 坚持 坚持坚持</div>
+    <div>加油加油加油加油！！！</div>
+    <p>我一定可以的！！！</p>
+    <div>坚持加油坚持加油！！！</div>
+
 </body>
 </html>
